--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
   height: 960px;
   display: grid;
   grid-template-rows: 10% repeat(4, 4fr);
-  grid-template-columns: repeat(4, 4fr) 10%;
-  grid-template-areas: "header header header header header"
-                       "canvas canvas canvas canvas sidebar"
-                       "canvas canvas canvas canvas sidebar"
-                       "canvas canvas canvas canvas sidebar"
-                       "canvas canvas canvas canvas sidebar"
+  grid-template-columns: repeat(4, 4fr);
+  grid-template-areas: "header header header newGrid"
+                       "canvas canvas canvas canvas"
+                       "canvas canvas canvas canvas"
+                       "canvas canvas canvas canvas"
+                       "canvas canvas canvas canvas"
 }
 
 #canvas {
@@ -20,17 +20,27 @@
 
 #header {
   grid-area: header;
-  background-color: red;
+  background-color: lightgray;
 }
 
-#sidebar {
-  grid-area: sidebar;
-  background-color: yellow;
+#newGrid {
+  grid-area: newGrid;
+  color: white;
+  background-color: black;
 }
 
-#canvas div {
+#header h1 {
+  text-align: center;
+}
 
-
+#newGrid .button {
+  height: 100%;
+  width: 100%;
+  text-align: justify;
+  text-align: center;
+  font-size: 20px;
+  background-color: black;
+  color: white;
 }
 
 .hover {
