--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+:root {
+  --gridSize: 8;
+}
+
 #main {
   width: 960px;
   height: 960px;
   display: grid;
-  grid-template-rows: 10% repeat(4, 4fr);
-  grid-template-columns: repeat(4, 4fr);
+  grid-template-rows: 10% repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-areas: "header header header newGrid"
                        "canvas canvas canvas canvas"
                        "canvas canvas canvas canvas"
@@ -14,8 +18,8 @@
 #canvas {
   grid-area: canvas;
   display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: repeat(4, 25%);
+  grid-template-columns: repeat(var(--gridSize), 1fr);
+  grid-template-rows: repeat(var(--gridSize), 1fr);
 }
 
 #header {
