--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
   display: grid;
   grid-template-columns: repeat(var(--gridSize), 1fr);
   grid-template-rows: repeat(var(--gridSize), 1fr);
+  border: solid black 2px;
+  margin-top: 5px;
 }
 
 #header {
